Fix textarea bug for dark mode

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -176,7 +176,7 @@ img {
 /*! purgecss start ignore */
 
 @media only screen and (prefers-color-scheme: dark) {
-  .commento-root input[type=text], .commento-root textarea {
+  .commento-root textarea {
     background-color: #000000 !important;
     color: #aeadae !important;
   }
